--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_LoginPartial.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using static ASP.NET_MVC_Forum.Data.DataConstants.RoleConstants;
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
@@ -11,7 +12,7 @@
                 Hello <span class="font-italic">@User.Identity.Name</span>!
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                @if (User.IsInRole("Administrator"))
+                @if (User.IsInRole(AdminRoleName) || User.IsInRole(ModeratorRoleName))
                 {
                     <a class="dropdown-item" asp-area="Admin" asp-controller="Home" asp-action="Index">Admin Dashboard</a>
                 }
