made post title in Reports modal window a url leading to the reported post

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Reports/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Reports/Index.cshtml
@@ -31,7 +31,8 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <h5 class="modal-title" id="exampleModalLongTitle">
-                                        <a>@report.PostTitle</a>
+                                        <a asp-area="" asp-controller="Posts" asp-action="ViewPost" asp-route-postId="@report.PostId" asp-route-postTitle="@report.PostTitle" class="text-dark text-decoration-none">
+                                            @report.PostTitle</a>
                                     </h5>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
