--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/CommentReports/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/CommentReports/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ASP.NET_MVC_Forum.Areas.Admin.Models.Report.ReportViewModel>;
+﻿@model List<ASP.NET_MVC_Forum.Areas.Admin.Models.CommentReport.CommentReportViewModel>;
 @if (TempData.ContainsKey("Message"))
 {
     <div class="alert alert-success text-center" role="alert">
@@ -11,13 +11,8 @@
     {
         <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
             <div class="card text-center border-right border-left border-dark">
-                <div class="card-header bg-dark">
-                    <a asp-area="" asp-controller="Posts" asp-action="ViewPost" asp-route-postId="@report.PostId" asp-route-postTitle="@report.PostTitle" class="text-light text-decoration-none">
-                        @report.PostShortTitle
-                    </a>
-                </div>
                 <div class="card-body d-flex flex-column" style="min-height:180px">
-                    <p class="card-text">@report.ShortReason...</p>
+                    <p class="card-text text-danger">@report.ShortReason...</p>
 
                     <!-- Button trigger modal -->
 
@@ -29,17 +24,14 @@
                     <div class="modal fade" id="reportId@(report.Id)" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLongTitle">
-                                        <a asp-area="" asp-controller="Posts" asp-action="ViewPost" asp-route-postId="@report.PostId" asp-route-postTitle="@report.PostTitle" class="text-dark text-decoration-none">
-                                            @report.PostTitle</a>
-                                    </h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
+                                <div class="modal-body">
+                                    <h5>Comment full content</h5>
                                 </div>
                                 <div class="modal-body">
-                                    @report.Reason
+                                    <span>@report.CommentContent</span>
+                                </div>
+                                <div class="modal-body">
+                                    <span class="text-danger">@report.Reason</span>
                                 </div>
                                 <div class="modal-footer justify-content-center">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Exit</button>
@@ -47,13 +39,19 @@
                                     @if (!report.IsDeleted)
                                     {
                                         <form method="post">
-                                            <button type="submit" asp-area="" asp-controller="Posts" asp-action="Delete" asp-route-postId="@report.PostId" asp-route-postTitle="@report.PostTitle" class="btn btn-danger">Delete post and resolve</button>
+                                            <button type="submit" asp-area="Admin" asp-controller="CommentReports" asp-action="Delete" asp-route-postId="@report.CommentId" class="btn btn-danger">Delete comment and resolve</button>
                                         </form>
-                                        <a asp-area="Admin" asp-controller="Reports" asp-action="Delete" asp-route-reportId="@report.Id" class="btn btn-success">Mark Resolved</a>
+
+                                        <a asp-area="Admin" asp-controller="CommentReports" asp-action="Resolve" asp-route-reportId="@report.Id" class="btn btn-success">Mark Resolved</a>
+
+                                        <a asp-area="Admin" asp-controller="CommentReports" asp-action="Censor" asp-route-postId="@report.CommentId" class="btn btn-primary">Censor</a>
+
+                                        <a asp-area="Admin" asp-controller="CommentReports" asp-action="Censor" asp-route-postId="@report.CommentId" asp-route-withRegex="@true" class="btn btn-primary">Hard Censor</a>
+
                                     }
                                     else
                                     {
-                                        <a asp-area="Admin" asp-controller="Reports" asp-action="Restore" asp-route-reportId="@report.Id" class="btn btn-primary">Restore report</a>
+                                        <a asp-area="Admin" asp-controller="CommentReports" asp-action="Restore" asp-route-reportId="@report.Id" class="btn btn-primary">Restore comment</a>
                                     }
 
                                 </div>
