--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -73,8 +73,8 @@
                         </a>
                         <div class="collapse" id="collapseCommentReports" aria-labelledby="headingOne" data-bs-parent="#collapseReports">
                             <nav class="ml-4 sb-sidenav-menu-nested nav">
-                                <a class="nav-link" asp-area="Admin" asp-controller="Reports" asp-action="Index" asp-route-reportStatus="Active"><i class="fas fa-exclamation-triangle mr-2"></i>Active</a>
-                                <a class="nav-link" asp-area="Admin" asp-controller="Reports" asp-action="Index" asp-route-reportStatus="Deleted"><i class="fas fa-check mr-2"></i>Resolved</a>
+                                <a class="nav-link" asp-area="Admin" asp-controller="CommentReports" asp-action="Index" asp-route-reportStatus="Active"><i class="fas fa-exclamation-triangle mr-2"></i>Active</a>
+                                <a class="nav-link" asp-area="Admin" asp-controller="CommentReports" asp-action="Index" asp-route-reportStatus="Deleted"><i class="fas fa-check mr-2"></i>Resolved</a>
                             </nav>
                         </div>
                     </div>
