--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/CommentReports/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/CommentReports/Index.cshtml
@@ -12,7 +12,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
             <div class="card text-center border-right border-left border-dark">
                 <div class="card-body d-flex flex-column" style="min-height:180px">
-                    <p class="card-text text-danger">@report.ShortReason...</p>
+                    <p class="card-text text-danger">Profane words found in comment content: @report.ShortReason...</p>
 
                     <!-- Button trigger modal -->
 
@@ -31,7 +31,7 @@
                                     <span>@report.CommentContent</span>
                                 </div>
                                 <div class="modal-body">
-                                    <span class="text-danger">@report.Reason</span>
+                                    Profane words found in comment content: <span class="text-danger">@report.Reason</span>
                                 </div>
                                 <div class="modal-footer justify-content-center">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Exit</button>
@@ -51,7 +51,7 @@
                                     }
                                     else
                                     {
-                                        <a asp-area="Admin" asp-controller="CommentReports" asp-action="Restore" asp-route-reportId="@report.Id" class="btn btn-primary">Restore comment report</a>
+                                        <a asp-area="Admin" asp-controller="CommentReports" asp-action="Restore" asp-route-reportId="@report.Id" class="btn btn-primary">Restore comment and report</a>
                                     }
 
                                 </div>
