added buttons for voting

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
@@ -104,9 +104,17 @@
     </div>
 </div>
 
+
 <div class="px-4 pt-3 text-center">
     <a type="button" href='javascript:history.go(-1)' class="btn btn-secondary justify-content-center"><i class="ion ion-md-create"></i>Go Back</a>
 </div>
+
+<div class="px-4 pt-3 text-center mt-3">
+    <a href=""><i style="color:red" class="bi bi-hand-thumbs-down p-1 mr-4"></i></a>
+    <span>Rating: 213</span>
+    <a href=""><i style="color:green" class="bi bi-hand-thumbs-up p-1 ml-4 "></i></a>
+</div>
+
 
 <div class="container mt-5 mb-5">
     <div class="d-flex justify-content-center row">
